# alpaka

./: AbsCudaBuiltIn_8hpp.html  AbsCudaBuiltIn_8hpp_source.html  AbsHipBuiltIn_8hpp.html  AbsHipBuiltIn_8hpp_source.html  AbsStdLib_8hpp.html  AbsStdLib_8hpp_source.html  AbsUniformCudaHipBuiltIn_8hpp.html  AbsUniformCudaHipBuiltIn_8hpp_source.html  AccCpuFibers_8hpp.html  AccCpuFibers_8hpp_source.html  AccCpuOmp2Blocks_8hpp.html  AccCpuOmp2Blocks_8hpp_source.html  AccCpuOmp2Threads_8hpp.html  AccCpuOmp2Threads_8hpp_source.html  AccCpuOmp4_8hpp.html  AccCpuOmp4_8hpp_source.html  AccCpuSerial_8hpp.html  AccCpuSerial_8hpp_source.html  AccCpuSyclIntel_8hpp.html  AccCpuSyclIntel_8hpp_source.html  AccCpuSycl_8hpp.html  AccCpuSycl_8hpp_source.html  AccCpuTbbBlocks_8hpp.html  AccCpuTbbBlocks_8hpp_source.html  AccCpuThreads_8hpp.html  AccCpuThreads_8hpp_source.html  AccDevProps_8hpp.html  AccDevProps_8hpp_source.html  AccFpgaSyclIntel_8hpp.html  AccFpgaSyclIntel_8hpp_source.html  AccFpgaSyclXilinx_8hpp.html  AccFpgaSyclXilinx_8hpp_source.html  AccGenericSycl_8hpp.html  AccGenericSycl_8hpp_source.html  AccGpuCudaRt_8hpp.html  AccGpuCudaRt_8hpp_source.html  AccGpuHipRt_8hpp.html  AccGpuHipRt_8hpp_source.html  AccGpuSyclIntel_8hpp.html  AccGpuSyclIntel_8hpp_source.html  (+8408 more)
projects/vikunja/: CMakeLists.txt
projects/vikunja/example/: CMakeLists.txt
projects/vikunja/example/transformAlpakaAcc/: CMakeLists.txt
projects/vikunja/example/transformExecutor/: CMakeLists.txt
projects/vikunja/include/vikunja/: executor.hpp  transform.hpp  vikunja.hpp
projects/vikunja/test/: CMakeLists.txt
(+49 files in other folders)
